style.css
/* ... */
/*--------------------------------------------------------------
# Media
--------------------------------------------------------------*/
.page-content .wp-smiley,
.entry-content .wp-smiley,
.comment-content .wp-smiley {
	border: none;
	margin-bottom: 0;
	margin-top: 0;
	padding: 0;
}

/* Make sure embeds and iframes fit their containers. */
embed,
iframe,
object {
	max-width: 100%;
}

/* Make sure logo link wraps around logo image. */
.custom-logo-link {
	display: inline-block;
}

/*--------------------------------------------------------------
## Captions
--------------------------------------------------------------*/
.wp-caption {
	margin-bottom: 1.5em;
	max-width: 100%;
}

.wp-caption img[class*="wp-image-"] {
	display: block;
	margin-left: auto;
	margin-right: auto;
}

.wp-caption .wp-caption-text {
	margin: 0.8075em 0;
}

.wp-caption-text {
	text-align: center;
}

/*--------------------------------------------------------------
## Galleries
--------------------------------------------------------------*/
.gallery {
	margin-bottom: 1.5em;
}

.gallery-item {
	display: inline-block;
	text-align: center;
	vertical-align: top;
	width: 100%;
}

.gallery-columns-2 .gallery-item {
	max-width: 50%;
}

.gallery-columns-3 .gallery-item {
	max-width: 33.33%;
}

.gallery-columns-4 .gallery-item {
	max-width: 25%;
}

.gallery-columns-5 .gallery-item {
	max-width: 20%;
}

.gallery-columns-6 .gallery-item {
	max-width: 16.66%;
}

.gallery-columns-7 .gallery-item {
	max-width: 14.28%;
}

.gallery-columns-8 .gallery-item {
	max-width: 12.5%;
}

.gallery-columns-9 .gallery-item {
	max-width: 11.11%;
}

.gallery-caption {
	display: block;
}

/*--------------------------------------------------------------
## Schouwenburg
--------------------------------------------------------------*/

.site {
	overflow: hidden;
}

.admin-bar .site-header {
	top: 32px;
}

.admin-bar button.menu-toggle {
	top: 10px;
}

@media screen and (max-width: 1023px) {

	.admin-bar .site-header {
		top: 40px;
	}

}

.wp-caption-text {
	font-size: 0.6em;
  font-family: "Roboto", sans-serif;
}

.site-header {
	background-color: #0E2F3C;
	height: 62px;
	position: fixed;
	top: 0;
	width: 100%;
	z-index: 99;
}

.site-header-content {
	max-width: 1300px;
	margin-left: auto;
	margin-right: auto;
	padding-right: 80px;
}

.site-branding {
	float: left;
	background-color: #00B2E2;
	width: 260px;
	text-align: center;
	color: #FFF;
	font-family: "Roboto", sans-serif;
	font-weight: 500;
	text-transform: uppercase;
	height: 62px;
	padding: 9px;
}

.site-branding .logo-part-robert {
	font-size: 12px;
	line-height: 12px;
	letter-spacing: 2px;
}

.site-branding .logo-part-schouwenburg {
	font-size: 24px;
	letter-spacing: 2px;
}

.site-branding .logo-part-schouwenburg-text {
	border-top: 1px solid #FFF;
}

.menu-main-container {
	line-height: 62px;
}

button.menu-toggle {
	position: absolute;
	right: 8px;
	top: 8px;
	background: none;
	border: none;
	padding: 0;
}

button.menu-toggle img {
	width: 44px;
}

.main-navigation ul li:hover > ul,
.main-navigation ul li.focus > ul {
	background: #eaebec;
	padding: 1em 2em 1em 2em;
}

.main-navigation .sub-menu a {
	color: #0e2f3c;
}

.main-navigation .sub-menu li {
	margin: 0;
}

.main-navigation a:hover,
.main-navigation a:focus {
	color: #F9461C;
	border-bottom: inherit;
}

.main-navigation ul.sub-menu {
	columns: 2;
	line-height: 2;
}

@media screen and (max-width: 1023px) {

	.site-header {
		position: absolute;
	}

	.main-navigation ul li:hover > ul,
	.main-navigation ul li.focus > ul {
		background: inherit;
		color: inherit;
		top: 0;
		left: -40px;
		position: relative;
		width: 100vw;
	  font-weight: 400;
	  font-size: 90%;
		box-shadow: none;
		border-bottom: 1px solid #838994;
    line-height: 32px;
		padding-left: 40px;
		columns: 1;
		max-height: none;
	}

	.main-navigation.toggled .sub-menu .menu-item {
		border-bottom: 0;
	}

	.main-navigation .sub-menu a {
		color: #fff;
	}

	.main-navigation a:hover, .main-navigation a:focus {
		border: none;
	}
}

.main-navigation.toggled .menu-main-container {
	position: absolute;
	right: 0;
	top: 62px;
	background: #4c5058;
	width: 100%;
}

.main-navigation.toggled .menu-item {
	float: none;
	border-bottom: 1px solid #838994;
	margin-left: 0;
	padding-left: 40px;
}

.site-content, .entry-recommendations-content {
	margin-left: auto;
	margin-right: auto;
	max-width: 640px;
}

.site-content {
	min-height: calc(100vh - 94px - 3em - 8em + 1em);
	margin-top: 3em;
	padding-left: 1em;
	padding-right: 1em;
}

@media screen and (max-width: 767px) {

	.site-content {
		margin-top: 1.5em;
	}

}

footer.site-footer {
	text-align: center;
	font-family: "Roboto", sans-serif;
	font-size: 0.7em;
	color: #838994;
	margin-bottom: 0.7em;
	margin-top: 8em;
}

.blog article {
	border-bottom: 1px solid #CACCD1;
}

.entry-title a {
	text-decoration: none;
	border-bottom: none;
}

.entry-meta {
	padding-bottom: 6px;
	border-top: 1px solid #CACCD1;
	border-bottom: 1px solid #CACCD1;
	font-family: "Roboto", sans-serif;
}

.entry-meta a {
	border-bottom: 1px solid #CACCD1;
}

.entry-meta a:hover, .entry-meta a:focus {
	border-bottom: 1px solid #00B2E2;
}

.tags-links, .cat-links {
	font-weight: 500;
	font-size: 0.8em;
}

.entry-meta-other {
	font-size: 0.7em;
	color: #838994;
}

.entry-recommendations {
	background: #eaebec;
  position: relative;
  left: calc(-50vw + 300px);
  width: 100vw;
	padding-top: 2em;
  padding-bottom: 0.5em;
}

.entry-recommendations-content {
	padding-left: 1em;
	padding-right: 1em;
	columns: 2;
}

@media screen and (max-width: 767px) {

	.entry-recommendations {
		left: -1em;
		height: 610px;
		overflow: hidden;
	}

	.entry-recommendations-content {
		max-width: calc(100vw - 2em);
		columns: 1;
	}

}

.entry-recommendations article {
	break-inside: avoid;
	page-break-inside: avoid;
	height: 160px;
}

@media screen and (max-width: 767px) {

	.entry-recommendations article {
		height: 130px;
	}

}

.entry-recommendations-content p {
	margin: 0;
}
/* ... */

